--- a/kaptan/po/it.po
+++ b/kaptan/po/it.po
@@ -1,38 +1,38 @@
-# SOME DESCRIPTIVE TITLE.
+# translation of it.po to italiano
 # This file is put in the public domain.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
+# Andrea Decorte <adecorte@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-12 20:44+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2007-03-07 17:37+0200\n"
+"Last-Translator: Andrea Decorte <adecorte@gmail.com>\n"
+"Language-Team: italiano\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/goodbyedlg.ui line 43
 #: rc.cpp:4 ../src/goodbyedlg.cpp:66
 #, no-c-format
 msgid "Start Tasma"
-msgstr ""
+msgstr "Avvia Tasma"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/goodbyedlg.ui line 51
 #: rc.cpp:7 ../src/goodbyedlg.cpp:67
 #, no-c-format
-msgid ""
-"<center>You have finished!  Now you can start using <b>Pardus</b></center>"
-msgstr ""
+msgid "<center>You have finished!  Now you can start using <b>Pardus</b></center>"
+msgstr "<center>Hai finito!  Ora puoi iniziare a usare <b>Pardus</b></center>"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 16
 #: rc.cpp:10 ../src/kaptan.cpp:41 ../src/welcomedlg.cpp:65
 #, no-c-format
 msgid "Welcome"
-msgstr ""
+msgstr "Benvenuto"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 27
 #: rc.cpp:13 ../src/welcomedlg.cpp:66
@@ -43,6 +43,8 @@ msgid ""
 "This application will also set some default configuration for a better "
 "desktop :)."
 msgstr ""
+"Questa applicazione, di nome <b>Kaptan Desktop</b>, ti aiuterà ad effettuare una prima impostazione di base del tuo desktop <b>Pardus</b> in maniera veloce. "
+"Questa applicazione ti farà scegliere anche tra alcune configurazione predefinite in modo che tu ottenga un desktop migliore :)."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 38
 #: rc.cpp:16 ../src/welcomedlg.cpp:67
@@ -53,14 +55,14 @@ msgid ""
 "and code of other distributions; with a custom configuration framework which "
 "has the ability to evolve into an autonomous system; for simplifying the "
 "installation and usage of the computers."
-msgstr ""
+msgstr "<b>Pardus</b> è una distribuzione GNU/Linux, destinata alle necessità basilari di desktop di utenti già pratici di computer, partendo dalle idee, dall'architettura e dal codice di altre distribuzione, aggiunge un ambiente di configurazione personalizzato che permette di ottenere un sistema autonomo, per semplificare l'installazione e l'uso dei computer."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 16
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 38
 #: rc.cpp:20 rc.cpp:26 ../src/wallpaperdlg.cpp:94 ../src/wallpaperdlg.cpp:96
 #, no-c-format
 msgid "Wallpaper"
-msgstr ""
+msgstr "Sfondo"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 27
 #: rc.cpp:23 ../src/wallpaperdlg.cpp:95
@@ -69,25 +71,25 @@ msgid ""
 "Here, you can select a <b>wallpaper</b> for your desktop background. "
 "<b>Pardus</b> provides eye candy wallpapers, you can select one of them, as "
 "you wish."
-msgstr ""
+msgstr "Qui puoi scegliere uno <b>sfondo</b> per il tuo desktop. <b>Pardus</b> ti offre già diversi sfondi carini tra cui scegliere."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 62
 #: rc.cpp:29 ../src/wallpaperdlg.cpp:97
 #, no-c-format
 msgid "Don't change desktop background!"
-msgstr ""
+msgstr "Non cambiare lo sfondo del desktop!"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 134
 #: rc.cpp:33 ../src/wallpaperdlg.cpp:99
 #, no-c-format
 msgid "&Test Wallpaper"
-msgstr ""
+msgstr "&Prova sfondo"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 16
 #: rc.cpp:36 ../src/mousedlg.cpp:116
 #, no-c-format
 msgid "MouseSetupDlg"
-msgstr ""
+msgstr "MouseSetupDlg"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 27
 #: rc.cpp:39 ../src/mousedlg.cpp:117
@@ -96,61 +98,61 @@ msgid ""
 "If you are left-handed, you may prefer to swap the functions of the left and "
 "right buttons on your pointing device by choosing the 'Left handed' option "
 "below. You can also select default click behaviour."
-msgstr ""
+msgstr "Se sei mancino, potresti preferire invertire le funzioni del pulsante sinistro e destro del tuo dispositivo di puntamento scegliendo l'opzione \"Mancino\" qua sotto. Puoi anche scegliere il comportamento predefinito al click."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 58
 #: rc.cpp:42 ../src/mousedlg.cpp:118
 #, no-c-format
 msgid "Button Order"
-msgstr ""
+msgstr "Ordine dei pulsanti"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 85
 #: rc.cpp:45 ../src/mousedlg.cpp:119
 #, no-c-format
 msgid "Reverse scroll"
-msgstr ""
+msgstr "Scorrimento al contrario"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 156
 #: rc.cpp:49 ../src/mousedlg.cpp:121
 #, no-c-format
 msgid "Click behaviour"
-msgstr ""
+msgstr "Comportamento al click"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 167
 #: rc.cpp:52 ../src/mousedlg.cpp:122
 #, no-c-format
 msgid "&Single-click to open files and folders"
-msgstr ""
+msgstr "Click &singolo per aprire i file e le cartelle"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 178
 #: rc.cpp:55 ../src/mousedlg.cpp:123
 #, no-c-format
 msgid "Dou&ble-click to open files and folders (select icons on first click)"
-msgstr ""
+msgstr "D&oppio click per aprire i file e le cartelle (il primo click seleziona l'icona)"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 35
 #: rc.cpp:59 ../src/kaptan.cpp:61 ../src/packagedlg.cpp:101
 #, no-c-format
 msgid "Package Manager"
-msgstr ""
+msgstr "Gestore dei pacchetti"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 82
 #: rc.cpp:62 ../src/packagedlg.cpp:102
 #, no-c-format
 msgid "Check updates automatically for every"
-msgstr ""
+msgstr "Controlla automaticamenti gli aggiornamenti ogni"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 99
 #: rc.cpp:66 ../src/packagedlg.cpp:104
 #, no-c-format
 msgid " hours"
-msgstr ""
+msgstr "ore"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 121
 #: rc.cpp:69 ../src/packagedlg.cpp:105
 #, no-c-format
 msgid "Show in system tray"
-msgstr ""
+msgstr "Mostra nel vassoio di sistema"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 133
 #: rc.cpp:72 ../src/packagedlg.cpp:106
@@ -160,14 +162,14 @@ msgid ""
 "package-manager you can easily install new programs and upgrade your system. "
 "But also can work in the system tray and periodically checks new upgrades of "
 "the programs that are installed on your system."
-msgstr ""
+msgstr "Il <b>Gestore dei pacchetti</b> è l'interfaccia grafica di <b>PiSi</b>. Con il gestore di pacchetti puoi facilmente installare nuovi programmi e aggiornare il tuo sistema. Può funzionare anche dal vassoio di sistema e verificare periodicamente la presenza di nuovi aggiornamenti dei programmi installati."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 16
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 38
 #: rc.cpp:75 rc.cpp:81 ../src/styledlg.cpp:94 ../src/styledlg.cpp:96
 #, no-c-format
 msgid "Style"
-msgstr ""
+msgstr "Stile"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 27
 #: rc.cpp:78 ../src/styledlg.cpp:95
@@ -175,52 +177,53 @@ msgstr ""
 msgid ""
 "Here, you can select a <b>style </b>for your desktop. <b>Pardus</b> provides "
 "some eye candy styles for you."
-msgstr ""
+msgstr "Qui puoi scegliere uno <b>stile</b> per il tuo desktop. <b>Pardus</b> ti permette già di scegliere degli effetti grafici di sicuro effetto."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 54
 #: rc.cpp:84 ../src/styledlg.cpp:97
 #, no-c-format
 msgid "Use enhanced Kickoff style menu"
-msgstr ""
+msgstr "Utilizza il menu avanzato \"Kickoff\""
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 62
 #: rc.cpp:87 ../src/styledlg.cpp:98
 #, no-c-format
 msgid "Test Style"
-msgstr ""
+msgstr "Prova lo stile"
 
 #: ../src/kaptan.cpp:45
 msgid "Mouse Setup"
-msgstr ""
+msgstr "Impostazione del mouse"
 
 #: ../src/kaptan.cpp:49
 msgid "Style Setup"
-msgstr ""
+msgstr "Impostazione dello stile"
 
 #: ../src/kaptan.cpp:53
 msgid "Wallpaper Setup"
-msgstr ""
+msgstr "Impostazione dello sfondo"
 
 #: ../src/kaptan.cpp:57
 msgid "Network Setup"
-msgstr ""
+msgstr "Impostazione della rete"
 
 #: ../src/kaptan.cpp:65
 msgid "Congratulations"
-msgstr ""
+msgstr "Congratulazioni"
 
 #: ../src/main.cpp:18
 msgid "Kaptan Desktop"
-msgstr ""
+msgstr "Kaptan Desktop"
 
 #: ../src/mouse.cpp:31
 msgid "Right handed"
-msgstr ""
+msgstr "Destro"
 
 #: ../src/mouse.cpp:32
 msgid "Left handed"
-msgstr ""
+msgstr "Mancino"
 
 #: ../src/network.cpp:42
 msgid "<big>Loading...</big>"
-msgstr ""
+msgstr "<big>Caricamento in corso...</big>"
+
