--- a/tasma/disk-manager/po/it.po
+++ b/tasma/disk-manager/po/it.po
@@ -1,86 +1,89 @@
-# SOME DESCRIPTIVE TITLE.
+# translation of it.po to Italian
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
+# Andrea Decorte <adecorte@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-19 10:50+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2007-03-07 19:56+0200\n"
+"Last-Translator: Andrea Decorte <adecorte@gmail.com>\n"
+"Language-Team: Italian <pardus-translation-it@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: src/diskform.py:92 src/diskform.py:139
 msgid "Disks"
-msgstr ""
+msgstr "Dischi"
 
 #: src/diskform.py:93 src/diskform.py:140
 msgid "Partitions"
-msgstr ""
+msgstr "Partizioni"
 
 #: src/diskform.py:132 src/disk-manager.py:94 src/disk-manager.py:379
 msgid "Disk Manager"
-msgstr ""
+msgstr "Gestore dischi"
 
 #: src/diskform.py:133
 msgid "File System Type :"
-msgstr ""
+msgstr "Tipo filesystem :"
 
 #: src/diskform.py:134
 msgid "Mount Point :"
-msgstr ""
+msgstr "Punto montaggio :"
 
 #: src/diskform.py:135
 msgid "Additional Options :"
-msgstr ""
+msgstr "Opzioni aggiuntive :"
 
 #: src/diskform.py:136
 msgid "Get Default Options"
-msgstr ""
+msgstr "Recupera opzioni predefinite"
 
 #: src/diskform.py:137
 msgid "Find Disks Automatically"
-msgstr ""
+msgstr "Trova dischi automaticamente"
 
 #: src/diskform.py:138
 msgid "Show System Partitions"
-msgstr ""
+msgstr "Mostra le partizioni di sistema"
 
 #: src/diskform.py:141
 msgid "To update disk changes the manager must run as root"
-msgstr ""
+msgstr "Per effettuare dei cambiamenti devi essere root"
 
 #: src/disk-manager.py:126
 msgid "User not in disk group !"
-msgstr ""
+msgstr "L'utente non appartiene al gruppo disk!"
 
 #: src/disk-manager.py:227 src/disk-manager.py:250
 msgid "Completed"
-msgstr ""
+msgstr "Completato"
 
 #: src/disk-manager.py:227 src/disk-manager.py:250
 msgid "File /etc/fstab updated !"
-msgstr ""
+msgstr "File /etc/fstab aggiornato!"
 
 #: src/disk-manager.py:268
 #, python-format
+#, fuzzy
 msgid "%s for %s failure !!"
-msgstr ""
+msgstr "%s per %s fallito !!"
 
 #: src/disk-manager.py:296
 msgid "Mount Point"
-msgstr ""
+msgstr "Punto di montaggio"
 
 #: src/disk-manager.py:297
 msgid "File System Type"
-msgstr ""
+msgstr "Tipo filesystem"
 
 #: src/disk-manager.py:374
 msgid "Disk Manager is already running!"
-msgstr ""
+msgstr "Il gestore dischi è già in esecuzione!"
+
