--- a/tasma/network-manager/po/fr.po
+++ b/tasma/network-manager/po/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-27 14:25+0200\n"
-"PO-Revision-Date: 2007-03-09 00:51+0200\n"
+"PO-Revision-Date: 2007-03-09 14:29+0200\n"
 "Last-Translator: Amine Chadly <amine.chadly@gmail.com>\n"
 "Language-Team: french <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -23,7 +23,7 @@ msgstr "Nom:"
 
 #: browser.py:56 connection.py:191
 msgid "Authentication"
-msgstr "authentification"
+msgstr "Authentification"
 
 #: browser.py:59 connection.py:282
 msgid "Address:"
@@ -38,7 +38,6 @@ msgid "Turn on/off connection"
 msgstr "Activer/Désactiver la connection"
 
 #: browser.py:103
-#, fuzzy
 msgid "Configure connection"
 msgstr "Configurer la connection réseau"
 
@@ -158,9 +157,8 @@ msgid "User name:"
 msgstr "Nom d'utlisateur"
 
 #: connection.py:263
-#, fuzzy
 msgid "Network settings"
-msgstr "Préférences réseau"
+msgstr "Paramètres réseau"
 
 #: connection.py:273
 msgid "Automatic query (DHCP)"
@@ -215,9 +213,8 @@ msgid "new connection"
 msgstr "Nouvelle connection"
 
 #: newconn.py:26
-#, fuzzy
 msgid "Create a new connection"
-msgstr "Créer une connection"
+msgstr "Créer une nouvelle connection"
 
 #: newconn.py:31
 msgid "Select device:"
