--- a/sysinfo/po/fr/kio_sysinfo.po
+++ b/sysinfo/po/fr/kio_sysinfo.po
@@ -1,232 +1,233 @@
-# SOME DESCRIPTIVE TITLE.
+# translation of kio_sysinfo.po to French
 # This file is put in the public domain.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
+# Amine Chadly <amine.chadly@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: kio_sysinfo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-01 16:28+0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2007-03-10 16:06+0200\n"
+"Last-Translator: Amine Chadly <amine.chadly@gmail.com>\n"
+"Language-Team: French <kde-francophone@kde.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: ksysinfopart.cpp:72
 msgid "KSysinfo"
-msgstr ""
+msgstr "KSysinfo"
 
 #: sysinfo.cpp:67
 msgid "%1 GB"
-msgstr ""
+msgstr "%1 Go"
 
 #: sysinfo.cpp:69
 msgid "%1 MB"
-msgstr ""
+msgstr "%1 Mo"
 
 #: sysinfo.cpp:71
 msgid "%1 KB"
-msgstr ""
+msgstr "%1 Ko"
 
 #: sysinfo.cpp:107 sysinfo.cpp:101
 msgid "My Computer"
-msgstr ""
+msgstr "Mon Ordinateur"
 
 #: sysinfo.cpp:102
 msgid "Folders, Harddisks, Removable Devices, System Information and more..."
-msgstr ""
+msgstr "Répertoires, Disques durs, Périphériques mobiles, Informations systèmes et plus encore..."
 
 #: sysinfo.cpp:108
 msgid "Looking for disk information..."
-msgstr ""
+msgstr "Recherche des informations concernant le disque..."
 
 #: sysinfo.cpp:109
 msgid "Disk Information"
-msgstr ""
+msgstr "Informations du disque"
 
 #: sysinfo.cpp:113
 msgid "OS Information"
-msgstr ""
+msgstr "Information de l'OS"
 
 #: sysinfo.cpp:115
 msgid "OS:"
-msgstr ""
+msgstr "OS:"
 
 #: sysinfo.cpp:116
 msgid "Current user:"
-msgstr ""
+msgstr "Utilisateur actif : "
 
 #: sysinfo.cpp:117
 msgid "System:"
-msgstr ""
+msgstr "Système : "
 
 #: sysinfo.cpp:118
 msgid "KDE:"
-msgstr ""
+msgstr "KDE :"
 
 #: sysinfo.cpp:124
 msgid "Display Info"
-msgstr ""
+msgstr "Propriétés de la carte vidéo"
 
 #: sysinfo.cpp:126
 msgid "Vendor:"
-msgstr ""
+msgstr "Fabricant : "
 
 #: sysinfo.cpp:127
 msgid "Model:"
-msgstr ""
+msgstr "Modèle : "
 
 #: sysinfo.cpp:129
 msgid "Driver:"
-msgstr ""
+msgstr "Pilote :"
 
 #: sysinfo.cpp:136
 msgid "Getting OS information...."
-msgstr ""
+msgstr "Obtention des informations sur l'OS..."
 
 #: sysinfo.cpp:139
 msgid "Common Folders"
-msgstr ""
+msgstr "Répertoire Communs"
 
 #: sysinfo.cpp:143
 msgid "My Home Folder"
-msgstr ""
+msgstr "Mon Répertoire d'Accueil"
 
 #: sysinfo.cpp:144
 msgid "Root Folder"
-msgstr ""
+msgstr "Répertoire Racine"
 
 #: sysinfo.cpp:145
 msgid "Network Folders"
-msgstr ""
+msgstr "Répertoires Réseaux"
 
 #: sysinfo.cpp:149
 msgid "Looking up network status..."
-msgstr ""
+msgstr "Détermination du statut réseau..."
 
 #: sysinfo.cpp:152
 msgid "Network Status"
-msgstr ""
+msgstr "Statu Réseau"
 
 #: sysinfo.cpp:159
 msgid "Looking for CPU information..."
-msgstr ""
+msgstr "Recherche des informations pour la CPU"
 
 #: sysinfo.cpp:163
 msgid "CPU Information"
-msgstr ""
+msgstr "Information CPU"
 
 #: sysinfo.cpp:165
 msgid "Processor (CPU):"
-msgstr ""
+msgstr "Processeur (CPU) :"
 
 #: sysinfo.cpp:166
 msgid "Speed:"
-msgstr ""
+msgstr "Vitesse :"
 
 #: sysinfo.cpp:167
 msgid "%1 MHz"
-msgstr ""
+msgstr "%1 MHz"
 
 #: sysinfo.cpp:172
 msgid "Looking for memory information..."
-msgstr ""
+msgstr "Recherche des informations concernant la mémoire,,,"
 
 #: sysinfo.cpp:174
 msgid "Memory Information"
-msgstr ""
+msgstr "Informations concernant la mémoire"
 
 #: sysinfo.cpp:176
 msgid "Total memory (RAM):"
-msgstr ""
+msgstr "Mémoire cumulée (RAM):"
 
 #: sysinfo.cpp:177
 msgid "Free memory:"
-msgstr ""
+msgstr "Mémoire disponible :"
 
 #: sysinfo.cpp:178
 msgid "Used Memory"
-msgstr ""
+msgstr "Mémoire allouée :"
 
 #: sysinfo.cpp:179
 msgid "Total swap:"
-msgstr ""
+msgstr "Mémoire d'échange (swap) cumulée :"
 
 #: sysinfo.cpp:180
 msgid "Free swap:"
-msgstr ""
+msgstr "Mémoire d'échange (swap) disponible :"
 
 #: sysinfo.cpp:184
 msgid "Looking for hardware information..."
-msgstr ""
+msgstr "Recherche des informations concernant les périphériques..."
 
 #: sysinfo.cpp:186
 msgid "Hardware Information"
-msgstr ""
+msgstr "Informations concernant les périphériques"
 
 #: sysinfo.cpp:191
 msgid "Bios Vendor:"
-msgstr ""
+msgstr "Fabricant du Bios :"
 
 #: sysinfo.cpp:192
 msgid "Bios Version:"
-msgstr ""
+msgstr "Version du Bios :"
 
 #: sysinfo.cpp:256
 msgid "%1 (+ %2 Caches)"
-msgstr ""
+msgstr "%1 (+ %2 Caches)"
 
 #: sysinfo.cpp:288
 msgid "Device"
-msgstr ""
+msgstr "Périphérique"
 
 #: sysinfo.cpp:288
 msgid "Filesystem"
-msgstr ""
+msgstr "Système de fichier"
 
 #: sysinfo.cpp:289
 msgid "Total space"
-msgstr ""
+msgstr "Espace total"
 
 #: sysinfo.cpp:289
 msgid "Available space"
-msgstr ""
+msgstr "Espace disponible"
 
 #: sysinfo.cpp:295
 msgid "Press the right mouse button for more options like Mount or Eject"
-msgstr ""
+msgstr "Presser le bouton droit de la souris pour plus d'options comme Monter ou Ejecter"
 
 #: sysinfo.cpp:478
 msgid "%1 (3D Support)"
-msgstr ""
+msgstr "%1 (Support 3D)"
 
 #: sysinfo.cpp:480
 msgid "%1 (No 3D Support)"
-msgstr ""
+msgstr "%1 (Pas de support 3D)"
 
 #: sysinfo.cpp:491
 msgid "Network is <strong>unreachable</strong>"
-msgstr ""
+msgstr "Le réseau n'est <strong>pas accessible</strong>"
 
 #: sysinfo.cpp:493
 msgid "You are <strong>offline</strong>"
-msgstr ""
+msgstr "Vous êtes <strong>hors-ligne</strong>"
 
 #: sysinfo.cpp:495
 msgid "Network is <strong>shutting down</strong>"
-msgstr ""
+msgstr "Le réseau est <strong>en cours d'arrêt.</strong>"
 
 #: sysinfo.cpp:497
 msgid "<strong>Establishing</strong> connection to the network"
-msgstr ""
+msgstr "<strong>Etablissement<strong> de la connection <strong>en cours</strong>"
 
 #: sysinfo.cpp:499
 msgid "You are <strong>online</strong>"
-msgstr ""
+msgstr "Vous êtes <strong>en ligne</strong>"
 
 #: sysinfo.cpp:501
 msgid "Unknown network status"
-msgstr ""
+msgstr "Statut réseau inconnu"
+
